systemd: add TMPDIR parameter to unit environment
This can be used to specify Go's os.TempDir() path which is used for
icyci workspace directories.

Signed-off-by: David Disseldorp <ddiss@suse.de>

--- a/systemd/icyci.conf
+++ b/systemd/icyci.conf
@@ -18,3 +18,6 @@ PUSH_SOURCE_TO_RESULTS="true"
 
 # While idle, poll source-repo for changes at this `seconds` interval
 POLL_INTERVAL="60"
+
+# use TMPDIR (Go's os.TempDir) as a temporary workspace
+#TMPDIR=/tmp
