systemd/service: drop after=mnt-resource.mount clause
Found by Michal Koutný: expecting a /mnt/resource mount point doesn't
make sense for a generic systemd service. This is leftover from when I
was running icyci jobs on Azure VMs.

Signed-off-by: David Disseldorp <ddiss@suse.de>

--- a/systemd/icyci@.service
+++ b/systemd/icyci@.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=icyCI
-After=network-online.target mnt-resource.mount
+After=network-online.target
 
 [Service]
 EnvironmentFile=-/etc/sysconfig/icyci
