systemd: add EXTRA_PARAMS environment variable
This can be used to specify extra optional icyci parameters, such as
-notes-ns and -source-reference.
I would have preferred to use separate environment variables, which
automatically prepend any value with the corresponding <parameter>=
argument (only if set), but it doesn't look like that's currently
possible with systemd.

Signed-off-by: David Disseldorp <ddiss@suse.de>

--- a/systemd/icyci-instance.conf
+++ b/systemd/icyci-instance.conf
@@ -19,5 +19,8 @@ PUSH_SOURCE_TO_RESULTS="true"
 # While idle, poll source-repo for changes at this `seconds` interval
 POLL_INTERVAL="60"
 
-# use TMPDIR (Go's os.TempDir) as a temporary workspace
+# Use TMPDIR (Go's os.TempDir) as a temporary workspace
 #TMPDIR=/tmp
+
+# Extra parameters to provide icyci on startup (see icyci -help for details).
+#EXTRA_PARAMS="-source-reference=/git/local-mirror -notes-ns=icyci-riscv"
