--- a/systemd/system/icyci@.service
+++ b/systemd/system/icyci@.service
@@ -7,7 +7,7 @@ EnvironmentFile=-/etc/sysconfig/icyci
 EnvironmentFile=-/etc/icyci/%i.conf
 User=icyci
 # icyci binary needs to be in PATH
-ExecStart=icyci --source-repo=${SOURCE_REPO} --source-branch=${SOURCE_BRANCH} --test-script=${TEST_SCRIPT} --results-repo=${RESULTS_REPO} --push-source-to-results=${PUSH_SOURCE_TO_RESULTS} --poll-interval=${POLL_INTERVAL} $EXTRA_PARAMS
+ExecStart=icyci -source-repo=${SOURCE_REPO} -source-branch=${SOURCE_BRANCH} -test-script=${TEST_SCRIPT} -results-repo=${RESULTS_REPO} -push-source-to-results=${PUSH_SOURCE_TO_RESULTS} -poll-interval=${POLL_INTERVAL} $EXTRA_PARAMS
 KillMode=mixed
 Restart=on-failure
 RestartSec=30s
